Fix mouse events in the TableView now that values inside cells are wrapped in a DIV.

--- a/stylesheets/flame.css.scss
+++ b/stylesheets/flame.css.scss
@@ -796,6 +796,14 @@ input[type="password"] {
         position: absolute;
         z-index: 2;
         font-size: 12px;
+
+        /* Make sure we can receive click events in IE */
+        .table-selection-background {
+            width: 100%;
+            height: 100%;
+            background-color: black;
+            @include opacity(0.001);
+        }
     }
 
     div.read-only {
